BUGFR-988:Table alignment correction

--- a/src/components/BottomScrollbar/index.scss
+++ b/src/components/BottomScrollbar/index.scss
@@ -99,3 +99,19 @@
     }
   }
 }
+
+@media only screen and(min-width: 1320px) {
+  .pf-table tfoot .bottom-scrollbar {
+    .trackerTable.bottom-cell {
+      min-width: 110px !important;
+    }
+  }
+}
+
+@media only screen and(min-width: 1600px) {
+  .pf-table tfoot .bottom-scrollbar {
+    .trackerTable.bottom-cell {
+      min-width: 106px !important;
+    }
+  }
+}
